# multi-drive

./: .gitignore  Cargo.toml
src/: db.rs  error.rs  main.rs  types.rs  utils.rs
src/drives/: discord.rs  local.rs  mod.rs
