[package]
name = "multi-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
webdav-handler = { git = "https://github.com/Arkitu/webdav-handler-rs", features = ["actix-compat"]}
actix-web = "4.4.0"
env_logger = "0.10.0"
http = "0.2.9"
futures = "0.3.28"
pin-project = "1.1.3"
http-body = "0.4.5"
bytes = "1"
rusqlite = { version = "0.29.0", features = ["chrono"] }
tokio-rusqlite = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["multipart"] }
dotenv = "0.15.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }